--- a/notebooks/new_notebook.ipynb
+++ b/notebooks/new_notebook.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn\n"
+    "import seaborn\n",
+    "import sklearn"
    ]
   },
   {
@@ -229,6 +230,75 @@
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "passenger_count\n",
+       "1    18776091\n",
+       "2     4011320\n",
+       "5     1925101\n",
+       "3     1194724\n",
+       "4      578234\n",
+       "6      576867\n",
+       "0       94824\n",
+       "9          14\n",
+       "7           7\n",
+       "8           3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['passenger_count'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['passenger_count'] <=6]\n",
+    "df.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "week_day\n",
+       "4    4179905\n",
+       "5    4123006\n",
+       "3    4068784\n",
+       "2    3940295\n",
+       "1    3803860\n",
+       "6    3561958\n",
+       "0    3479353\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['week_day'].value_counts()"
    ]
   },
   {
